--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <!-- What goes in the Body? this is the end user content. What the user sees in a website is all done through the body. EX: Text, links, images, and media -->
 <h1>Exceptional</h1>
 <h2>Reality Group</h2>
+<!-- Links -->
+<!-- These Links are all files from the website ie we use the file name -->
+<a href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a href="contact.html">Contact</a>
+<!-- Link to another Website -->
+<a href="http://hud.gov" target ="_blank">H.U.D.</a>
+<!-- We need to be explicit when it comes to telling out browser where the image is. We need to tell the browser to go inside the images folder and pull out the intro-pic.jpg image -->
+<img src="images/intro-pic.jpg" alt="A beatiful living room" title="Welcome to Exceptional Reality">
+<!--
+folder/ == enter a folder
+filename == use a file in the current folder
+../ == leave the current folder and go up to the parent folder
+-->
+
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
